# peural

./: Activation.cpp  Activation.h  CMakeLists.txt  DebugUtilities.cpp  DebugUtilities.h  ImageGrayscale8Bit.cpp  ImageGrayscale8Bit.h  ImageIO.cpp  ImageIO.h  NeuralLayer.cpp  NeuralLayer.h  NeuralNetwork.cpp  NeuralNetwork.h  Neuron.cpp  Neuron.h  README.md  Util.cpp  Util.h  iris.cpp  main.cpp  minstdriver.cpp
